erDiagram
  AUTH_USERS ||--|| PROFILES : owns
  PROFILES ||--o{ TEAM_MEMBERSHIPS : joins
  TEAMS ||--o{ TEAM_MEMBERSHIPS : contains
  COURT_GROUPS ||--o{ COURTS : groups
  COURT_GROUPS ||--o{ DAILY_SCORE_SETTINGS : configures
  COURTS ||--o{ QUEUE_ENTRIES : queues
  TEAMS ||--o{ QUEUE_ENTRIES : enters
  QUEUE_ENTRIES ||--o{ ACTIVE_QUEUE_PLAYERS : locks
  PROFILES ||--o{ ACTIVE_QUEUE_PLAYERS : prevents_multi_queue
  COURTS ||--o{ GAMES : hosts
  GAMES ||--|{ GAME_ROSTER_SNAPSHOTS : freezes
  GAMES ||--o{ SCORE_SUBMISSIONS : receives
  GAME_ROSTER_SNAPSHOTS ||--o| PLAYER_SCORES : scores
  GAMES ||--|{ PLAYER_GAME_HISTORY : records_once
  QUEUE_ENTRIES ||--o| TEAM_CHECK_INS : checks_in
  COURT_EVENTS ||--|{ COURT_EVENT_COURTS : affects
  COURTS ||--o{ COURT_EVENT_COURTS : affected
  PROFILES ||--o{ MAINTENANCE_REPORTS : reports
  COURTS ||--o{ MAINTENANCE_REPORTS : concerns

  PROFILES {
    uuid id PK
    string display_name
    string role
  }
  TEAMS {
    uuid id PK
    uuid captain_user_id FK
    string format
    int consecutive_wins
  }
  TEAM_MEMBERSHIPS {
    uuid id PK
    uuid team_id FK
    uuid user_id FK
    datetime left_at
  }
  COURTS {
    string id PK
    string court_group_id FK
    uuid active_game_id FK
  }
  QUEUE_ENTRIES {
    uuid id PK
    string court_id FK
    uuid team_id FK
    int position
    string status
  }
  ACTIVE_QUEUE_PLAYERS {
    uuid user_id PK
    uuid queue_entry_id FK
  }
  GAMES {
    uuid id PK
    string court_id FK
    string status
    int target_score
    uuid winner_team_id FK
  }
  SCORE_SUBMISSIONS {
    uuid id PK
    uuid game_id FK
    uuid team_id FK
    string status
  }
  PLAYER_GAME_HISTORY {
    uuid game_id PK
    uuid user_id PK
    string format
    int points
    boolean won
  }
